src/test/ui/issues/issue-2823.stderr
error[E0599]: no method named `clone` found for struct `C` in the current scope
  --> $DIR/issue-2823.rs:13:16
   |
LL | struct C {
   | -------- method `clone` not found for this
...
LL |     let _d = c.clone();
   |                ^^^^^ method not found in `C`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `std::sync::Arc<C>` here
   |        the method is available for `std::rc::Rc<C>` here
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
